Fixes row display en both speakers and previous events
A single row was created for all speakers, meaning that if the description text
grew a bit long items would start getting weirdly arranged. Now each row within the
speakers grid is an actual row, so misalignments will push the whole row instead of
a single item

--- a/_includes/css/agency.css
+++ b/_includes/css/agency.css
@@ -499,6 +499,26 @@ img.speakers-info
     text-transform: none;
 }
 
+.speaker-prev {
+    padding: 15px;
+    margin: 0 0 15px;
+}
+
+.video-container {
+    position: relative;
+    padding-bottom: 56.25%; /* 16:9 */
+    height: 0;
+  }
+  .video-container iframe {
+    position: absolute;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    object-fit: cover;
+    border-radius: 10px;
+  }
+
 /*
 #speakers .speakers-item .speakers-caption p {
     margin: 0;
@@ -733,6 +753,7 @@ section#contact {
     background-position: center;
     background-repeat: no-repeat;
 }
+
 
 section#contact .section-heading {
     color: #fff;
